<resources>
    <string name="app_name">Yamblz.Weather</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="settings_temperature_key" translatable="false">temperature</string>

    <string name="celsius" translatable="false">°C</string>
    <string name="fahrenheit" translatable="false">°F</string>

    <string name="title_weather">Weather</string>
    <string name="title_settings">Settings</string>
    <string name="title_info">About</string>

    <string name="settings_title_temperature">Temperature</string>

    <string name="update_interval">Update interval</string>
    <string name="app_version">Version</string>
    <string name="copyright">© 2017 "Yandex"</string>
    <string name="no_data">No data</string>
    <string name="no_internet">No Internet connection</string>
    <string name="retry">Retry</string>

    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="min_60">1 hour</string>
    <string name="min_180">3 hours</string>
    <string name="city_location">City location</string>
    <string name="failed_city_details">Failed to get city details</string>

    <string name="places">Places</string>
    <string name="add_place">Add place +</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="percents_format">%.1f %%</string>
    <string name="pressure_format">%.1f hPa</string>
    <string name="no_places_yet">No places yet!</string>
    <string name="add_places">Add places</string>
    <string name="no_downloaded">No downloaded weather :) \n Swipe down to refresh</string>
</resources>
