...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.toor.yamblzweather.presentation.mvp.view.fragment.PlacesListFragment">

    <Button
        android:id="@+id/bAddPlace"
        android:text="@string/add_place"
        android:background="@drawable/button_bg_for_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/etSearchPlace"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etSearchPlace"
        android:background="@drawable/button_bg_for_arrow"
...
