<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llForecastLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvDayOfWeek"
        android:textSize="@dimen/info_app_name_text_size"
        android:textColor="@color/color_forecast_list_text"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/ivForecastIcon"
        android:layout_gravity="center"
        android:layout_width="@dimen/forecast_small_icon_size"
        android:layout_height="@dimen/forecast_small_icon_size" />
    <TextView
        android:id="@+id/tvTemperature"
        android:textSize="@dimen/info_version_text_size"
        android:textColor="@color/color_forecast_list_text"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>